# bigcontest_chatbot

./: .env  .gitattributes  .gitignore  Chatgpt_app.py  Preprocessing-RAG.py  README.md  app.py  app_test.py  app_test_copy.py  backup.py  colab_code.py  config.py  debugging.py  env  environment.yml  good_price.py  optimized_app.py  process_example.py  pyproject.toml  read_json.py  recommend.py  requirements.txt  scraping_checkpoint.json  streamlit_app.py  test_app.py  test_app_1.py  test_app_2.py  visit_jeju_crawling  visit_jeju_crawling.py  visitjeju_crawling.py
.dvc/: .gitignore  config
.dvc/tmp/: lock
bigcontest_chatbot/: pyproject.toml
data/: FINAL_MCT.csv  FINAL_REVIEW.csv  FINAL_TRRSRT.csv  JEJU_SENTIMENT_MOP_REVIEWS_DATA.json  JEJU_TRRSRT_REVIEWS_DATA.json  mct_menus.json  merge_mop_sentiment.json  visit_jeju.json  제주특별자치도_착한가격업소현황_20240603.csv
data/faiss_index/: kakaomap_reviews.faiss  mct_index_pq.faiss  menu.faiss  visit_jeju.faiss  wkday_index_pq.faiss
modules/: all_embeddings_v2.npy  faiss_index_v2.index
processed_data/: faiss_index.py  good_price.py  mct_menus.json.dvc  mct_menus.py  merge_mop_sentiment.json.dvc  month.json.dvc  visit_jeju.json.dvc
raw_data/: .gitattributes
selenium/: food_site_data.py  food_site_id.py  google_2.py  jeju_visit.py  pyvenv.cfg  shopping_site_data.py  shopping_site_id.py  stay_site_data.py  stay_site_id.py  total_site_data.py  total_site_data_2.py  tour_site_data.py  tour_site_id.py
src/: chatbot.py  config.py  data_loader.py  data_processor.py  models.py  prompts.py  recommender.py  retrievers.py  ui.py
(+68 files in other folders)
