[tool.poetry]
name = "bigcontest-chatbot"
version = "0.1.0"
description = ""
authors = ["Marlangcow <108016277+Marlangcow@users.noreply.github.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
langchain-community = "^0.3.1"
selenium = "^4.26.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
chromedriver-autoinstaller = "^0.6.4"
webdriver-manager = "^4.0.2"
tqdm = "^4.66.6"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
