[tool.poetry]
name = "bigcontest-chatbot"
version = "0.1.0"
description = ""
authors = ["Marlangcow <108016277+Marlangcow@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
langchain-community = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
